[package]
name = "todo-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
crossterm = "0.22"
todo-core = { git = "https://github.com/frankiebaffa/todo_core", branch = "master" }
tui = "0.17"
